force-app/main/default/objects/PAF_BPoint__c/PAF_BPoint__c.object-meta.xml
<CustomObject>
    <label>PAF BPoint</label>
    <nameField>
        <label>PAF BPoint Receipt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PAF BPoint</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>