force-app/main/default/objects/PAF_BPoint__c/fields/Amount_Charged__c.field-meta.xml
<CustomField>
    <fullName>Amount_Charged__c</fullName>
    <label>Amount Charged</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>