force-app/main/default/objects/PAF_BPoint__c/fields/Amount_Original__c.field-meta.xml
<CustomField>
    <fullName>Amount_Original__c</fullName>
    <label>Amount Original</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>