force-app/main/default/objects/PAF_BPoint__c/fields/Amount_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Amount_Surcharge__c</fullName>
    <label>Amount Surcharge</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>