force-app/main/default/objects/PAF_BPoint__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <description>Represents a credit card type eg. Am Ex, Diners Club, JCB, MasterCard, Visa.</description>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AX</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>JC</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>VC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>