force-app/main/default/objects/PAF_BPoint__c/fields/Crn1__c.field-meta.xml
<CustomField>
    <fullName>Crn1__c</fullName>
    <description>Stores the CRN from a successful transaction</description>
    <label>Crn1</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>