force-app/main/default/objects/PAF_BPoint__c/fields/RRN__c.field-meta.xml
<CustomField>
    <fullName>RRN__c</fullName>
    <description>Retrieval Reference Number</description>
    <inlineHelpText>Retrieval Reference Number</inlineHelpText>
    <label>RRN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>