force-app/main/default/objects/PAF_BPoint__c/fields/Travel_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Travel_Bookings__c</fullName>
    <label>Travel Bookings</label>
    <referenceTo>PAF_Corp_Travel_Bookings__c</referenceTo>
    <relationshipName>PAF_BPoint</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>